<resources>
    <string name="app_name">Movies</string>
    <string name="switch_popular">Sort by Popularity</string>
    <string name="switch_rating">Sort by Rating</string>
    <string name="popularity_vs_ratings">Popularity/Ratings</string>
    <string name="no_internet_connection">There is no internet connection!</string>
    <string name="no_movies">There are no movies!</string>
    <string name="details_label">Movie Details</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="average_score">Average Score:</string>
    <string name="released">Released:</string>
    <string name="no_reviews">There are no reviews</string>
    <string name="no_videos">There are no videos</string>
    <string name="sort_by">Sort by</string>
    <string name="rating">Rating</string>
    <string name="votes">Votes</string>
    <string name="show_favorites">Show favorites</string>
    <string name="no_favorites">There are no favorites to display</string>
    <string name="reviews">REVIEWS</string>
    <string name="trailers">TRAILERS</string>
    <string name="review_label">Reviews</string>
    <string name="favorites_button">favorites button</string>
    <string name="divider">divider</string>
    <string name="trailer_label">Trailers</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="error_thumbnail_view">There was an error initializing the YouTubeThumbnailView (%1$s)</string>
    <string name="chromeless">Chromeless</string>
    <string name="no_trailers">There are no trailers for this movie</string>
    <string name="loading_indicator">loading indicator</string>
    <string name="empty_text_view">empty view text shows up here</string>
    <string name="review_button_description">click for reviews of this movie</string>
    <string name="trailer_button_description">click for movie trailers</string>
    <string name="image_for_the_movie_trailer">Image for the movie trailer</string>
    <string name="tool_text">Welcome back to Popular Movies! In this second and final stage, you’ll add additional functionality to the app you built in Stage 1.</string>
    <string name="preference_file_key">MovieAppPreferencesFile</string>
</resources>
