<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@drawable/card"
    android:elevation="@dimen/cardview_default_elevation">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:background="@color/colorPrimaryDark"
            android:elevation="6dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:padding="6dp"
            android:shadowColor="@android:color/black"
            android:shadowDx="2"
            android:shadowDy="3"
            android:shadowRadius="14"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            tools:text="title" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="160dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="false"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="false"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="24dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_poster"
            android:elevation="6dp" />


        <TextView
            android:id="@+id/release_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/image"
            android:background="@android:color/transparent"
            android:elevation="6dp"
            android:padding="6dp"
            android:shadowColor="@android:color/black"
            android:shadowDx="2"
            android:shadowDy="3"
            android:shadowRadius="14"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="2015" />

        <TextView
            android:id="@+id/run_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/release_date"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/image"
            android:elevation="6dp"
            android:padding="6dp"
            android:shadowColor="@android:color/black"
            android:shadowDx="2"
            android:shadowDy="3"
            android:shadowRadius="14"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="120min" />

        <TextView
            android:id="@+id/vote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/run_time"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/image"
            android:background="@android:color/transparent"
            android:elevation="6dp"
            android:padding="6dp"
            android:shadowColor="@android:color/black"
            android:shadowDx="2"
            android:shadowDy="3"
            android:shadowRadius="14"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:text="8.1/10" />

        <ImageButton
            android:id="@+id/favorite_button"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_below="@+id/vote"
            android:layout_margin="16dp"
            android:layout_toEndOf="@+id/image"
            android:background="@android:drawable/btn_star_big_off"
            android:contentDescription="@string/favorites_button"
            android:minWidth="96dp"
            android:padding="6dp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/plot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image"
            android:background="@android:color/transparent"
            android:elevation="2dp"
            android:padding="10dp"
            android:shadowColor="@android:color/black"
            android:shadowDx="2"
            android:shadowDy="3"
            android:shadowRadius="14"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:typeface="monospace"
            tools:text="@string/tool_text" />

        <ImageView
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignParentBottom="false"
            android:layout_alignParentStart="false"
            android:layout_below="@+id/plot"
            android:background="@android:drawable/divider_horizontal_dark"
            android:baselineAlignBottom="false"
            android:contentDescription="@string/divider"
            android:elevation="6dp" />


    </RelativeLayout>

</android.support.v7.widget.CardView>